Added new contact us form

--- a/bootstrap_theme/pendigital/factory_forms.scss
+++ b/bootstrap_theme/pendigital/factory_forms.scss
@@ -165,4 +165,87 @@
     }
 }
 
+// end .pd-forms-1
+// start .pd-forms-2
+.pd-forms-2 {
+    h2 {
+        font-size: 2.4rem;
+        font-weight: 700;
+        margin-bottom: 20px;
+    }
+
+    .pd-forms-2-para {
+        line-height: 1.8;
+        font-weight: 300;
+        font-size: 1.4rem;
+    }
+
+    form {
+        margin-top: 40px;
+
+        .pd-forms-2-submit {
+            background: none;
+            border: 1px solid $info;
+            padding: 10px 20px;
+            border-radius: 50rem;
+            margin-top: 10px;
+            display: inline-block;
+            text-transform: uppercase;
+            text-decoration: none;
+            font-weight: 700;
+            color: $info;
+            font-size: 0.8rem;
+            transition: background 0.4s;
+
+            &:hover {
+                border: 1px solid darken($info, 10%);
+                background: darken($info, 10%);
+                color: $white;
+            }
+
+            &:focus {
+                outline: 2px dotted $primary;
+                outline-offset: 4px;
+            }
+        }
+    }
+
+    .pd-forms-2-label {
+        font-size: 0.7rem;
+        font-weight: 700;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        margin-bottom: 10px;
+    }
+
+    .pd-forms-2-address {
+        p {
+            margin-bottom: 6px;
+
+            strong {
+                font-weight: 700;
+            }
+        }
+
+        a {
+            text-decoration: none;
+            color: $black;
+            font-weight: 700;
+            font-size: 2rem;
+            transition: color 0.4s;
+
+            &:hover {
+                color: $gray-600;
+            }
+
+            &:focus {
+                outline: 2px dotted $primary;
+                outline-offset: 4px;
+            }
+        }
+    }
+}
+
+
+
 
