Added new form for contact - refinements

--- a/bootstrap_theme/pendigital/factory_forms.scss
+++ b/bootstrap_theme/pendigital/factory_forms.scss
@@ -242,6 +242,10 @@
                 outline: 2px dotted $primary;
                 outline-offset: 4px;
             }
+
+            @media (min-width: 992px) and (max-width: 1199px) {
+                font-size: 1.6rem;
+            }
         }
     }
 }
