Added new carousel empty page and sass

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -68,5 +68,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_grid";
 @import "pendigital/factory_widgets";
 @import "pendigital/factory_page_menus";
+@import "pendigital/factory_carousels";
 
 /* Custom CSS rules come here */
