--- a/bootstrap_theme/pendigital/factory_carousels.scss
+++ b/bootstrap_theme/pendigital/factory_carousels.scss
@@ -81,5 +81,30 @@
             outline-offset: 4px;
         }
     }
+
+    .glide__bullets {
+        text-align: center;
+
+        .glide__bullet {
+            width: 9px;
+            height: 9px;
+            padding: 0;
+            border-radius: 50%;
+            border: 2px solid darken($info, 10%);
+            background: $info;
+            transition: transform 0.4s;
+
+            &:focus {
+                outline: 2px dotted $info;
+                outline-offset: 2px;
+            }
+        }
+
+        .glide__bullet.glide__bullet--active {
+            transform: scale(1.3);
+
+            // box-shadow: 2px 2px 6px 3px rgba(0,0,0,0.4);
+        }
+    }
 }
 
