--- a/bootstrap_theme/pendigital/factory_lists.scss
+++ b/bootstrap_theme/pendigital/factory_lists.scss
@@ -27,3 +27,31 @@
 }
 
 // end pd-list-1
+// start .pd-list-2
+.pd-list-2 {
+    .pd-list-2-image {
+        width: 100%;
+        height: auto;
+    }
+
+    .pd-list-2-outer {
+        border-bottom: 1px solid $gray-200;
+    }
+
+    h2 {
+        font-weight: 700;
+        font-size: 1.8rem;
+        margin-bottom: 0px;
+        padding-left: 10px;
+    }
+
+    p {
+        font-weight: 300;
+        line-height: 1.8;
+        font-size: 1.2rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+}
