--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -69,5 +69,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_widgets";
 @import "pendigital/factory_page_menus";
 @import "pendigital/factory_carousels";
+@import "pendigital/factory_pricing";
 
 /* Custom CSS rules come here */
