--- a/bootstrap_theme/pendigital/factory_pricing.scss
+++ b/bootstrap_theme/pendigital/factory_pricing.scss
@@ -138,6 +138,132 @@
     }
 }
 
+// end .pd-pricing-1
+// start .pd-pricing-2
+.pd-pricing-2 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+    background: linear-gradient(#f7f7f7 0%, #f9f9f9 20%, #f9f9f9 90%, #f7f7f7 100%);
+
+    h2 {
+        font-weight: 700;
+        font-size: 0.7rem;
+        color: $white;
+        display: inline-block;
+        background: $info;
+        padding: 8px 14px;
+        border-radius: 50em;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-pricing-2-headline {
+        font-size: 2rem;
+        line-height: 1.8;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-pricing-2-subHeadline {
+        font-weight: 300;
+        line-height: 2;
+        font-size: 1rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-pricing-2-grid-outer {
+        display: grid;
+        grid-template-columns: 450px 450px;
+        grid-template-areas: 'pricing-1 pricing-2';
+        border: 1px solid $gray-300;
+        border-radius: 0.5rem;
+        background: $white;
+        box-shadow: 0 20px 15px rgba(0,0,0,.1);
+        grid-template-rows: 1fr;
+
+        .pd-pricing-2-price-1 {
+            padding: 50px;
+            border-right: 1px solid $gray-300;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .pd-pricing-2-price-2 {
+            padding: 50px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .pd-pricing-2-card-headline {
+            font-size: 1rem;
+            text-transform: uppercase;
+            font-weight: 700;
+            letter-spacing: 0.1em;
+        }
+
+        .pd-pricing-2-price-label {
+            font-weight: 700;
+            padding-bottom: 8px;
+        }
+
+        .pd-pricing-2-price {
+            font-weight: 700;
+            font-size: 2.6rem;
+            padding-left: 4px;
+            padding-right: 4px;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            color: $black;
+            font-weight: 700;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+
+            li {
+                padding-top: 4px;
+                padding-bottom: 4px;
+                padding-left: 32px;
+                position: relative;
+
+                &:before {
+                    content: url(/images/design-assets/icon-checkmark.svg);
+                    width: 12px;
+                    height: 12px;
+                    position: absolute;
+                    left: 0;
+                }
+            }
+        }
+
+        .btn.btn-info {
+            color: $white;
+
+            &:focus {
+                outline: 2px dotted $primary;
+                outline-offset: 4px;
+            }
+        }
+    }
+}
+
+// end .pd-pricing-2
+
+
+
+
+
+
+
+
 
 
 
