Added new pricing 2

--- a/bootstrap_theme/pendigital/factory_pricing.scss
+++ b/bootstrap_theme/pendigital/factory_pricing.scss
@@ -179,19 +179,36 @@
 
     .pd-pricing-2-grid-outer {
         display: grid;
-        grid-template-columns: 450px 450px;
-        grid-template-areas: 'pricing-1 pricing-2';
+
+        // grid-template-areas: 'pricing-1 pricing-2';
         border: 1px solid $gray-300;
         border-radius: 0.5rem;
         background: $white;
         box-shadow: 0 20px 15px rgba(0,0,0,.1);
-        grid-template-rows: 1fr;
+
+        @media (max-width: 991px) {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto auto;
+        }
+
+        @media (min-width: 992px) {
+            grid-template-columns: 450px 450px;
+            grid-template-rows: 1fr;
+        }
 
         .pd-pricing-2-price-1 {
             padding: 50px;
-            border-right: 1px solid $gray-300;
             display: flex;
             flex-direction: column;
+
+            @media (max-width: 991px) {
+                border-bottom: 1px solid $gray-300;
+                border-right: none;
+            }
+
+            @media (min-width: 992px) {
+                border-right: 1px solid $gray-300;
+            }
         }
 
         .pd-pricing-2-price-2 {
@@ -201,10 +218,12 @@
         }
 
         .pd-pricing-2-card-headline {
-            font-size: 1rem;
-            text-transform: uppercase;
+            font-size: 1.8rem;
+
+            // text-transform: uppercase;
             font-weight: 700;
-            letter-spacing: 0.1em;
+
+            // letter-spacing: 0.1em;
         }
 
         .pd-pricing-2-price-label {
@@ -217,6 +236,14 @@
             font-size: 2.6rem;
             padding-left: 4px;
             padding-right: 4px;
+        }
+
+        .pd-pricing-2-subHeadline {
+            min-height: 80px;
+
+            // color: $gray-600;
+            font-weight: 300;
+            line-height: 2;
         }
 
         ul {
@@ -256,6 +283,9 @@
 }
 
 // end .pd-pricing-2
+
+
+
 
 
 
