--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -70,5 +70,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_page_menus";
 @import "pendigital/factory_carousels";
 @import "pendigital/factory_pricing";
+@import "pendigital/factory_faqs";
 
 /* Custom CSS rules come here */
