--- a/bootstrap_theme/pendigital/factory_heroesHalf.scss
+++ b/bootstrap_theme/pendigital/factory_heroesHalf.scss
@@ -14,8 +14,8 @@
             font-weight: 700;
             font-size: 0.7rem;
             color: $white;
+            display: inline-block;
 
-            // display: inline-block;
             // background: rgba(255, 255, 255, 1);
             background: $info;
             padding: 8px 14px;
@@ -221,6 +221,124 @@
 }
 
 // end pd-heroesHalf-3
+// start pd-heroesHalf-4
+.pd-heroesHalf-4 {
+    .pd-heroesHalf-4-text-outer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
+        @media (max-width: 575px) {
+            min-height: 300px;
+        }
+
+        h1 {
+            display: inline-block;
+            font-weight: 700;
+            font-size: 0.7rem;
+            color: $white;
+
+            // display: inline-block;
+            // background: rgba(255, 255, 255, 1);
+            background: $info;
+            padding: 8px 14px;
+            border-radius: 50em;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+        }
+
+        .pd-heroesHalf-4-headline {
+            color: white;
+            font-weight: 300;
+            font-size: 2rem;
+            line-height: 1.5;
+
+            p {
+                margin-bottom: 0px;
+            }
+
+            strong {
+                font-weight: 700;
+            }
+
+            @media (max-width: 575px) {
+                font-size: 2rem;
+            }
+        }
+
+        .pd-heroesHalf-4-subHeadline {
+            color: white;
+            font-size: 1rem;
+            font-weight: 300;
+
+            p {
+                margin-bottom: 0px;
+            }
+
+            strong {
+                font-weight: 700;
+            }
+        }
+    }
+
+    footer {
+        width: 100%;
+
+        .btn.btn-info {
+            color: $white;
+
+            &:focus {
+                outline: 2px dotted $white;
+                outline-offset: 4px;
+            }
+        }
+
+        .form-control {
+            max-width: 260px;
+
+            &:focus {
+                outline: 2px dotted $white;
+                outline-offset: 4px;
+            }
+        }
+    }
+
+    .pd-heroesHalf-4-image-outer {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        overflow: hidden;
+
+        .pd-heroesHalf-4-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+            position: absolute;
+            transition: opacity 0.4s;
+            opacity: 0;
+        }
+
+        .pd-heroesHalf-4-image.pd-heroesHalf-4-image-loaded {
+            opacity: 1;
+        }
+    }
+
+    .pd-heroesHalf-4-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient($black 0%, rgba(0, 0, 0, 0.8) 40%, rgba(0, 0, 0, 0.8) 60%, $black 100%);
+        opacity: 0.7;
+    }
+}
+
+// end pd-heroesHalf-4
 
 
 
