--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -71,5 +71,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_carousels";
 @import "pendigital/factory_pricing";
 @import "pendigital/factory_faqs";
+@import "pendigital/factory_breadcrumbs";
 
 /* Custom CSS rules come here */
