--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -722,3 +722,159 @@
 }
 
 // end pd-cards-6
+// start .pd-cards-7
+.pd-cards-7 {
+    h2 {
+        font-size: 2rem;
+        color: $black;
+        line-height: 1.5;
+        font-weight: 700;
+    }
+
+    // .pd-cards-7-outer is the anchor
+    .pd-cards-7-outer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-decoration: none;
+        text-align: center;
+        padding: 20px;
+        transition: background-color 0.4s;
+        border: 1px solid $white;
+
+        header {
+            flex: 1 0;
+
+            h3 {
+                font-size: 1.4rem;
+                font-weight: 700;
+                color: $black;
+            }
+
+            img {
+                margin: 20px;
+                width: 120px;
+                transition: transform 0.4s;
+            }
+        }
+
+        .pd-cards-7-body {
+            flex: 1 0;
+            color: $gray-600;
+            line-height: 1.8;
+        }
+
+        footer {
+            border: 1px solid $gray-300;
+            border-radius: 50rem;
+            transition: transform 0.4s;
+
+            p {
+                color: $gray-600;
+                text-transform: uppercase;
+                letter-spacing: 0.1em;
+                font-size: 0.7rem;
+                margin-bottom: 0px;
+                padding: 6px 12px;
+            }
+        }
+
+        &:hover {
+            // background-color: linear-gradient(#f7f7f7 0%, #f9f9f9 20%, #f9f9f9 90%, #f7f7f7 100%);
+            // background-color: $gray-100;
+            background-color: rgba(248,249,250, 0.8);
+            border: 1px solid $gray-200;
+            border-radius: 15px;
+
+            header {
+                img {
+                    transform: scale(1.1);
+                }
+            }
+
+            footer {
+                transform: scale(1.1);
+                box-shadow: 4px 4px 8px rgba(0,0,0,0.2);
+            }
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 4px;
+        }
+    }
+}
+
+// start .pd-cards-8
+.pd-cards-8 {
+    h2 {
+        font-size: 2rem;
+        color: #000;
+        line-height: 1.5;
+        font-weight: 700;
+    }
+
+    // pd-cards-8-outer is anchor
+    .pd-cards-8-outer {
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        text-align: center;
+        padding: 20px;
+        transition: background-color 0.4s;
+        border: 1px solid #fff;
+
+        header {
+            flex: 1 0;
+
+            h3 {
+                font-size: 1.4rem;
+                font-weight: 700;
+                color: #000;
+                line-height: 1.4;
+            }
+        }
+
+        .pd-cards-8-body {
+            flex: 1 0;
+            line-height: 1.8;
+            color: $gray-600;
+        }
+
+        footer {
+            p {
+                color: #6c757d;
+                text-transform: uppercase;
+                letter-spacing: 0.1em;
+                margin-bottom: 0px;
+                padding: 6px 12px;
+                transition: transform 0.4s;
+
+                &:before {
+                    content: ">";
+                    padding-right: 12px;
+                    transition: padding-right 0.2s;
+                }
+            }
+        }
+
+        &:hover {
+            background-color: rgba(248, 249, 250, 0.8);
+            border: 1px solid $gray-200;
+            border-radius: 15px;
+
+            footer {
+                p {
+                    &:before {
+                        padding-right: 3px;
+                    }
+                }
+            }
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 4px;
+        }
+    }
+}
