--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -72,5 +72,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_pricing";
 @import "pendigital/factory_faqs";
 @import "pendigital/factory_breadcrumbs";
+@import "pendigital/factory_admin_page_menus";
 
 /* Custom CSS rules come here */
