Added in admin table

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -75,5 +75,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_admin_page_menus";
 @import "pendigital/factory_admin_page_menus_2";
 @import "pendigital/factory_admin_logins";
+@import "pendigital/factory_admin_tables";
 
 /* Custom CSS rules come here */
