--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -76,5 +76,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_admin_page_menus_2";
 @import "pendigital/factory_admin_logins";
 @import "pendigital/factory_admin_tables";
+@import "pendigital/factory_admin_cards";
 
 /* Custom CSS rules come here */
