--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -78,5 +78,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_admin_tables";
 @import "pendigital/factory_admin_cards";
 @import "pendigital/factory_admin_forms";
+@import "pendigital/factory_admin_dashboard.scss";
 
 /* Custom CSS rules come here */
