Added nested list component to admin forms

--- a/bootstrap_theme/pendigital/factory_specials_multiBox.scss
+++ b/bootstrap_theme/pendigital/factory_specials_multiBox.scss
@@ -252,7 +252,7 @@
                 transform: translateY(-10px);
                 display: flex;
                 flex-direction: column;
-                justify-content: start;
+                justify-content: flex-start;
                 align-items: flex-start;
 
                 &:after {
