--- a/bootstrap_theme/pendigital/factory_admin_forms.scss
+++ b/bootstrap_theme/pendigital/factory_admin_forms.scss
@@ -110,6 +110,127 @@
                     font-weight: 700;
                 }
             }
+
+            .pd-admin-form-1-nested-list {
+                border-radius: 10px;
+                padding: 20px;
+                border: 1px solid $gray-200;
+                background: $gray-100;
+
+                @media (min-width: 992px) {
+                    max-width: 500px;
+                }
+
+                h2 {
+                    font-size: 1.2rem;
+                    font-weight: 700;
+                }
+
+                .pd-form-1-nested-list-inner {
+                    display: flex;
+                    flex-direction: column;
+
+                    .pd-form-1-nested-list-item {
+                        min-height: 60px;
+                        border-radius: 10px;
+                        border: 1px solid $gray-200;
+                        overflow: hidden;
+                        background-color: $white;
+                        display: flex;
+                        flex-direction: row;
+
+                        // anchor
+                        .pd-form-1-nested-list-item-img-outer {
+                            width: 60px;
+                            height: 60px;
+                            overflow: hidden;
+                            position: relative;
+
+                            @media (max-width: 575px) {
+                                display: none;
+                            }
+
+                            img {
+                                position: absolute;
+                                width: 100%;
+                                height: 100%;
+                                object-fit: cover;
+                                object-position: center center;
+                            }
+                        }
+
+                        .pd-form-1-nested-list-item-body {
+                            padding: 10px;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            flex: 1 0;
+                            overflow-x: hidden;
+
+                            h3 {
+                                font-size: 0.9rem;
+                                font-weight: 700;
+                                margin-bottom: 0px;
+                            }
+
+                            p {
+                                margin-bottom: 0px;
+                                font-size: 0.8rem;
+                            }
+
+                            @media (max-width: 575px) {
+                                p {
+                                    display: none;
+                                }
+                            }
+                        }
+
+                        .pd-form-1-nested-list-item-buttons {
+                            width: 120px;
+                            display: flex;
+                            flex-direction: row;
+                            align-items: center;
+                            justify-content: space-between;
+                            padding-right: 7px;
+
+                            // anchor
+                            .pd-form-1-nested-list-item-view-outer {
+                                width: 40px;
+                                padding: 4px;
+                                display: flex;
+                                flex-direction: row;
+                                justify-content: center;
+                                align-items: center;
+                            }
+
+                            .pd-form-1-nested-list-item-btn-outer {
+                                display: flex;
+                                flex-direction: row;
+
+                                .pd-form-1-nested-list-item-btn {
+                                    width: 30px;
+                                    height: 30px;
+                                    padding: 4px;
+                                    margin: 3px;
+                                    display: flex;
+                                    flex-direction: column;
+                                    justify-content: center;
+                                    align-items: center;
+                                    background-color: $gray-600;
+                                    border-radius: 3px;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                footer {
+                    padding-top: 20px;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                }
+            }
         }
     }
 }
