--- a/bootstrap_theme/pendigital/factory_grid.scss
+++ b/bootstrap_theme/pendigital/factory_grid.scss
@@ -307,6 +307,64 @@
     }
 }
 
+.pd-grid-2 {
+    .pd-grid-2-grid {
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
+        grid-auto-rows: 40px;
+    }
+
+    .pd-grid-2-item {
+        background-color: #ffffff;
+        border: 1px solid $gray-300;
+
+        .content {
+            header {
+                position: relative;
+                overflow: hidden;
+                min-height: 225px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    object-fit: cover;
+                    object-position: center center;
+                }
+            }
+
+            .pd-grid-2-body {
+                padding: 15px;
+
+                h2 {
+                    font-weight: 700;
+                    font-size: 1.4rem;
+                    color: $gray-800;
+                }
+
+                p {
+                    font-weight: 300;
+                    font-size: 0.9rem;
+                    color: $gray-800;
+                    line-height: 1.8;
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
