Added new admin page menu 3 bare bones

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -74,6 +74,7 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_breadcrumbs";
 @import "pendigital/factory_admin_page_menus";
 @import "pendigital/factory_admin_page_menus_2";
+@import "pendigital/factory_admin_page_menus_3";
 @import "pendigital/factory_admin_logins";
 @import "pendigital/factory_admin_tables";
 @import "pendigital/factory_admin_cards";
