--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -878,3 +878,148 @@
         }
     }
 }
+
+// start .pd-cards-9
+.pd-cards-9 {
+    background: linear-gradient(rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.8) 50%, rgba(0,0,0,0.9) 100%);
+    color: $white;
+
+    .pd-cards-9-label {
+        font-size: 0.7rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-cards-9-headline {
+        font-size: 2.4rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-cards-9-leading-para {
+        font-size: 1.4rem;
+        line-height: 1.8;
+        font-weight: 300;
+        padding-bottom: 10px;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-cards-9-btn {
+        border: 1px solid $white;
+        padding: 10px 20px;
+        border-radius: 50rem;
+        margin-top: 10px;
+        display: inline-block;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-weight: 700;
+        color: $white;
+        font-size: 0.8rem;
+        transition: background 0.4s;
+
+        &:hover {
+            border: 1px solid darken($info, 10%);
+            background: darken($info, 10%);
+            color: $white;
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 4px;
+        }
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        color: $white;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 0.8rem;
+
+        li {
+            padding-top: 4px;
+            padding-bottom: 4px;
+            padding-left: 32px;
+            position: relative;
+
+            &:before {
+                content: url(/images/design-assets/icon-checkmark.svg);
+                width: 12px;
+                height: 12px;
+                position: absolute;
+                left: 0;
+            }
+        }
+    }
+
+    .pd-cards-9-sub-card {
+        background: rgba(255, 255, 255, 0.9);
+        border-width: 1px;
+        border-color: #ffffff;
+        padding: 24px;
+
+        .pd-cards-9-sub-card-header {
+            h3 {
+                margin-top: 20px;
+                color: $black;
+                font-weight: 700;
+                font-size: 2rem
+            }
+
+            a {
+                display: inline-block;
+
+                img {
+                    margin-right: 12px;
+                    min-width: 40px;
+                    max-height: 60px
+                }
+
+                &:focus {
+                    outline: 2px dotted $primary;
+                    outline-offset: 4px;
+                }
+            }
+        }
+
+        .pd-cards-9-sub-card-body {
+            p {
+                color: $black;
+                line-height: 1.8;
+                font-size: 0.9rem;
+                font-weight: 300
+            }
+        }
+
+        .pd-cards-9-sub-card-links {
+            display: flex;
+            flex-direction: column;
+
+            a {
+                display: inline-block;
+                text-decoration: none;
+                text-transform: uppercase;
+                margin-bottom: 4px;
+                font-weight: 700;
+                color: $primary;
+                font-size: 0.8rem;
+
+                span {
+                    &:before {
+                        content: ">";
+                        padding-right: 4px;
+                        color: $primary;
+                    }
+                }
+            }
+        }
+    }
+}
