--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -884,6 +884,13 @@
     background: linear-gradient(rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.8) 50%, rgba(0,0,0,0.9) 100%);
     color: $white;
 
+    .pd-cards-9-img {
+        width: 100%;
+        max-width: 280px;
+        padding-bottom: 40px;
+        padding-top: 20px;
+    }
+
     .pd-cards-9-label {
         font-size: 0.7rem;
         font-weight: 700;
@@ -967,6 +974,8 @@
         padding: 24px;
 
         .pd-cards-9-sub-card-header {
+            max-width: 240px;
+
             h3 {
                 margin-top: 20px;
                 color: $black;
@@ -978,9 +987,10 @@
                 display: inline-block;
 
                 img {
+                    height: 70px;
                     margin-right: 12px;
-                    min-width: 40px;
-                    max-height: 60px
+                    max-width: 240px;
+                    margin-bottom: 6px;
                 }
 
                 &:focus {
@@ -1007,7 +1017,7 @@
                 display: inline-block;
                 text-decoration: none;
                 text-transform: uppercase;
-                margin-bottom: 4px;
+                margin-bottom: 10px;
                 font-weight: 700;
                 color: $primary;
                 font-size: 0.8rem;
