--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -1033,3 +1033,92 @@
         }
     }
 }
+
+// end .pd-cards-9
+// start .pd-cards-10
+.pd-cards-10 {
+    .pd-cards-10-label {
+        font-size: 0.7rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-cards-10-headline {
+        font-size: 2.4rem;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-cards-10-leading-para {
+        font-size: 1.4rem;
+        line-height: 1.8;
+        font-weight: 300;
+        padding-bottom: 10px;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-cards-10-img-outer {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        img {
+            width: 100%;
+            max-width: 300px;
+        }
+    }
+
+    .pd-cards-10-btn {
+        background: $info;
+        padding: 10px 20px;
+        border-radius: 50rem;
+        color: $white;
+        text-decoration: none;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        font-size: 0.7rem;
+        font-weight: 700;
+        transition: background 0.4s;
+
+        &:hover {
+            background: darken($info, 10%);
+        }
+    }
+
+    .pd-cards-10-sub-card {
+        padding: 16px;
+        border: 1px solid $gray-400;
+        flex-grow: 1;
+        min-height: 200px;
+
+        img {
+            margin-bottom: 10px
+        }
+
+        h3 {
+            font-size: 1.8rem;
+            font-weight: 700;
+            line-height: 1.8;
+            margin-bottom: 0px
+        }
+
+        p {
+            color: $gray-800;
+            font-size: 0.9rem;
+            line-height: 1.8;
+            font-weight: 300;
+
+            strong {
+                font-weight: 700;
+            }
+        }
+    }
+}
