--- a/bootstrap_theme/pendigital/factory_heroes.scss
+++ b/bootstrap_theme/pendigital/factory_heroes.scss
@@ -1131,43 +1131,204 @@
     }
 }
 
+.pd-hero-12 {
+    h1 {
+        font-size: 0.7rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-weight: 700;
+    }
 
+    .pd-hero-12-headline {
+        font-size: 2.8rem;
+        font-weight: 300;
+        strong {
+            font-weight: 700;
+        }
+    }
 
+    .pd-hero-12-subHeadline {
+        line-height: 1.8;
+        font-weight: 300;
+        font-size: 1rem;
+        strong {
+            font-weight: 700;
+        }
+    }
 
+    .pd-hero-12-btn {
+        background: $info;
+        padding: 10px 20px;
+        border-radius: 50rem;
+        color: $white;
+        text-decoration: none;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        font-size: 0.7rem;
+        font-weight: 700;
+        transition: background 0.4s;
 
+        &:hover {
+            background: darken($info, 10%);
+        }
+    }
 
+    .pd-hero-12-btn-light {
+        text-transform: uppercase;
+        text-decoration: none;
+        font-size: 0.8rem;
+        padding-left: 20px;
+        font-weight: 400;
+        transition: color 0.4s;
 
+        @media (max-width: 767px) {
+            padding-left: 0px;
+        }
 
+        &:hover {
+            color: $gray-200;
+        }
+    }
 
+    .pd-hero-12-img-thumbnail {
+        border-radius: 50%;
+    }
 
+    .pd-hero-12-img-thumbnail.pd-hero-12-img-thumbnail-right {
+        margin-left: -20px;
+    }
 
+    .pd-hero-12-img-outer {
+        overflow: hidden;
+        position: relative;
+        min-height: 700px;
 
+        img {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            object-fit: cover;
+            object-position: center center;
+        }
+    }
 
+    .pd-hero-12-img-overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: linear-gradient($black 0%, rgba(0, 0, 0, 0.6) 40%, rgba(0, 0, 0, 0.6) 80%, $black 100%);
+        opacity: 0.1;
+    }
+}
 
+.pd-hero-13 {
+    position: relative;
+    overflow: hidden;
+    min-height: 900px;
 
+    .pd-hero-13-img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center center;
+        z-index: 0;
+    }
 
+    .pd-hero-13-img-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient($black 0%, rgba(0,0,0, 0.8) 40%, rgba(0,0,0, 0.8) 80%, $black 100%);
+        opacity: 0.3;
+    }
+    
+    .container {
+        position: relative;
+        z-index: 3;
+        
+    }
 
+    .pd-hero-13-content-outer {
+        margin-top: 100px;
+        margin-bottom: 100px;
+        padding: 70px 30px;
+        background-color: rgba(255, 255, 255, 0.7);
 
+        h1 {
+            font-size: 0.7rem;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            font-weight: 700;
+        }
+    
+        .pd-hero-13-headline {
+            font-size: 2.8rem;
+            font-weight: 300;
+            strong {
+                font-weight: 700;
+            }
+        }
+    
+        .pd-hero-13-subHeadline {
+            line-height: 1.8;
+            font-weight: 300;
+            font-size: 1rem;
+            strong {
+                font-weight: 700;
+            }
+        }
+    
+        .pd-hero-13-btn {
+            background: $info;
+            padding: 10px 20px;
+            border-radius: 50rem;
+            color: $white;
+            text-decoration: none;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+            font-size: 0.7rem;
+            font-weight: 700;
+            transition: background 0.4s;
+    
+            &:hover {
+                background: darken($info, 10%);
+            }
+        }
+    
+        .pd-hero-13-btn-light {
+            text-transform: uppercase;
+            text-decoration: none;
+            font-size: 0.8rem;
+            padding-left: 20px;
+            font-weight: 400;
+            transition: color 0.4s;
+    
+            @media (max-width: 767px) {
+                padding-left: 0px;
+            }
+    
+            &:hover {
+                color: $gray-200;
+            }
+        }
+    
+        .pd-hero-13-img-thumbnail {
+            border-radius: 50%;
+        }
+    
+        .pd-hero-13-img-thumbnail.pd-hero-13-img-thumbnail-right {
+            margin-left: -20px;
+        }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
-
+    }
+}
