Added in bootstrap tabs component

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -80,5 +80,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_admin_cards";
 @import "pendigital/factory_admin_forms";
 @import "pendigital/factory_admin_dashboard.scss";
+@import "pendigital/factory_tabs.scss";
 
 /* Custom CSS rules come here */
